make-a-wish-salesforce/src/objects/Volunteer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Non_Wish_Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Feedback record to a Non-Wish Event</description>
        <label>Non-Wish &amp; Events</label>
        <referenceTo>Non_Wish_Events__c</referenceTo>
        <relationshipLabel>Volunteer Feedback</relationshipLabel>
        <relationshipName>Volunteer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>1-5 (5 is good)</inlineHelpText>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Volunteer Role</description>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Volunteer Feedback</relationshipLabel>
        <relationshipName>Volunteer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Captures the source the the feedback provided.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wish Family</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The staff member who provided this feedback (as opposed to the user who typed in the feedback and created this record, which is logged in the Created By field on this record).</description>
        <inlineHelpText>The staff member who provided this feedback.</inlineHelpText>
        <label>Staff Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Contact__c</fullName>
        <label>Volunteer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Feedback</relationshipLabel>
        <relationshipName>Volunteer_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wish</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wish</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Volunteer Feedback</relationshipLabel>
        <relationshipName>Volunteer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VF-{0000}</displayFormat>
        <label>Volunteer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_between_1_and_5</fullName>
        <active>true</active>
        <errorConditionFormula>Rating__c &lt; 1
||
 Rating__c &gt; 5</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Please Select a Rating between 1 and 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_either_Wish_OR_Non_Wish_Event</fullName>
        <active>true</active>
        <description>Select either Wish OR Non Wish Event.  Feedback cannot be for both at the same time.</description>
        <errorConditionFormula>NOT(ISBLANK(Non_Wish_Events__c))  
&amp;&amp;
NOT(ISBLANK(Wish__c))</errorConditionFormula>
        <errorMessage>Select either a Wish OR a Non Wish Event.  Feedback cannot be provide for both at the same time.  Please create one record per event or wish.</errorMessage>
    </validationRules>
</CustomObject>